--- a/views/about.ejs
+++ b/views/about.ejs
@@ -30,14 +30,14 @@
 				
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="post-media wow fadeIn">
-                        <img src="images/about_02.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="/images/about_02.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
 			</div>
 			<div class="row align-items-center">
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="post-media wow fadeIn">
-                        <img src="images/about_03.jpg" alt="" class="img-fluid img-rounded">
+                        <img src="/images/about_03.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
 				
@@ -102,7 +102,7 @@
                     <div class="testi-carousel owl-carousel owl-theme">
                         <div class="testimonial clearfix">
 							<div class="testi-meta">
-                                <img src="images/testi_01.png" alt="" class="img-fluid">
+                                <img src="/images/testi_01.png" alt="" class="img-fluid">
                                 <h4>James Fernando </h4>
                             </div>
                             <div class="desc">
@@ -115,7 +115,7 @@
 
                         <div class="testimonial clearfix">
 							<div class="testi-meta">
-                                <img src="images/testi_02.png" alt="" class="img-fluid">
+                                <img src="/images/testi_02.png" alt="" class="img-fluid">
                                 <h4>Jacques Philips </h4>
                             </div>
                             <div class="desc">
@@ -128,7 +128,7 @@
 
                         <div class="testimonial clearfix">
 							<div class="testi-meta">
-                                <img src="images/testi_03.png" alt="" class="img-fluid ">
+                                <img src="/images/testi_03.png" alt="" class="img-fluid ">
                                 <h4>Venanda Mercy </h4>
                             </div>
                             <div class="desc">
@@ -140,7 +140,7 @@
                         <!-- end testimonial -->
                         <div class="testimonial clearfix">
 							<div class="testi-meta">
-                                <img src="images/testi_01.png" alt="" class="img-fluid">
+                                <img src="/images/testi_01.png" alt="" class="img-fluid">
                                 <h4>James Fernando </h4>
                             </div>
                             <div class="desc">
@@ -153,7 +153,7 @@
 
                         <div class="testimonial clearfix">
 							<div class="testi-meta">
-                                <img src="images/testi_02.png" alt="" class="img-fluid">
+                                <img src="/images/testi_02.png" alt="" class="img-fluid">
                                 <h4>Jacques Philips </h4>
                             </div>
                             <div class="desc">
@@ -166,7 +166,7 @@
 
                         <div class="testimonial clearfix">
 							<div class="testi-meta">
-                                <img src="images/testi_03.png" alt="" class="img-fluid">
+                                <img src="/images/testi_03.png" alt="" class="img-fluid">
                                 <h4>Venanda Mercy </h4>
                             </div>
                             <div class="desc">
