--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -18,12 +18,12 @@
           <div class="col-lg-6 col-md-6 col-12">
             <div class="course-item mb-5">
               <div class="image-blog">
-                <img src="images/blog_1.jpg" alt="" class="img-fluid" />
+                <img src="/images/blog_1.jpg" alt="" class="img-fluid" />
               </div>
               <div class="course-br">
                 <div class="course-title">
                   <h2>
-                    <a href="course-single.html" title="">
+                    <a href="/courses/<%= courses[i].slug %>" title="">
                       <%= courses[i].name %>
                     </a>
                   </h2>
