--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -29,25 +29,44 @@
           <li class="nav-item <%= pageName === 'courses' && 'active' %>">
             <a class="nav-link" href="/courses">Courses</a>
           </li>
+          <% if(userIn) { %>
           <li class="nav-item <%= pageName === 'dashboard' && 'active' %>">
             <a class="nav-link" href="/dashboard">Dashboard</a>
           </li>
+          <% } %>
           <li class="nav-item <%= pageName === 'contact' && 'active' %>">
             <a class="nav-link" href="/contact">Contact</a>
           </li>
         </ul>
+
+        <% if(!userIn) { %>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a class="hover-btn-new log <%= pageName === 'login' && 'orange' %> mr-2" href="/login"
+            <a
+              class="hover-btn-new log <%= pageName === 'login' && 'orange' %> mr-2"
+              href="/login"
               ><span><i class="fa fa-sign-in" aria-hidden="true"></i></span
             ></a>
           </li>
           <li>
-            <a class="hover-btn-new log <%= pageName === 'register' && 'orange' %>" href="/register"
+            <a
+              class="hover-btn-new log <%= pageName === 'register' && 'orange' %>"
+              href="/register"
               ><span><i class="fa fa-user-plus" aria-hidden="true"></i></span
             ></a>
           </li>
         </ul>
+        <% } else { %>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a
+              class="hover-btn-new log <%= pageName === 'login' && 'orange' %> mr-2"
+              href="/login"
+              ><span><i class="fa fa-sign-out" aria-hidden="true"></i></span
+            ></a>
+          </li>
+        </ul>
+        <% } %>
       </div>
     </div>
   </nav>
