--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -59,9 +59,7 @@
         <% } else { %>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a
-              class="hover-btn-new log <%= pageName === 'login' && 'orange' %> mr-2"
-              href="/login"
+            <a class="hover-btn-new log mr-2" href="users/logout"
               ><span><i class="fa fa-sign-out" aria-hidden="true"></i></span
             ></a>
           </li>
