--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -31,7 +31,7 @@
           </li>
           <% if(userIn) { %>
           <li class="nav-item <%= pageName === 'dashboard' && 'active' %>">
-            <a class="nav-link" href="/dashboard">Dashboard</a>
+            <a class="nav-link" href="users/dashboard">Dashboard</a>
           </li>
           <% } %>
           <li class="nav-item <%= pageName === 'contact' && 'active' %>">
@@ -59,7 +59,7 @@
         <% } else { %>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a class="hover-btn-new log mr-2" href="users/logout"
+            <a class="hover-btn-new log mr-2" href="/users/logout"
               ><span><i class="fa fa-sign-out" aria-hidden="true"></i></span
             ></a>
           </li>
