--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,5 @@
-<%- include('partials/_header') %> <%- include('partials/_navigation') %>
+<%- include('partials/_header') %> <%- include('partials/_navigation') %> <%
+if(user) { %>
 <div class="all-title-box">
   <div class="container text-center">
     <h1>
@@ -126,4 +127,5 @@
   <!-- end container -->
 </div>
 <!-- end section -->
-<%- include('partials/_footer') %>
+
+<% } %> <%- include('partials/_footer') %>
