--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,6 +29,12 @@
                 />
               </div>
               <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
+                <select class="form-control" name="role">
+                  <option value="student">Student</option>
+                  <option value="teacher">Teacher</option>
+                </select>
+              </div>
+              <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                 <input
                   type="password"
                   name="password"
