--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -31,7 +31,7 @@
           </li>
           <% if(userIn) { %>
           <li class="nav-item <%= pageName === 'dashboard' && 'active' %>">
-            <a class="nav-link" href="users/dashboard">Dashboard</a>
+            <a class="nav-link" href="/users/dashboard">Dashboard</a>
           </li>
           <% } %>
           <li class="nav-item <%= pageName === 'contact' && 'active' %>">
