--- a/views/course.ejs
+++ b/views/course.ejs
@@ -20,8 +20,12 @@
           </div>
           <div class="post-content">
             <div class="post-date">
-              <span class="day">30</span>
-              <span class="month">Nov</span>
+              <form method="POST" action="/courses/enroll">
+                <input type="hidden" name="courseId" value="<%= course._id %>"/>
+                <button class="btn btn-lg btn-warning text-white">
+                  <span>ENROLL</span>
+                </button>
+              </form>
             </div>
             <div class="meta-info-blog">
               <span
