--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -36,6 +36,16 @@ if(user) { %> <%if(user.role === 'student') { %>
             </div>
             <div class="course-desc">
               <p><%= user.courses[i].description %></p>
+              <form method="POST" action="/courses/release">
+                <input
+                  type="hidden"
+                  name="courseId"
+                  value="<%= user.courses[i]._id %>"
+                />
+                <button class="btn btn-lg btn-danger text-white">
+                  <span>RELEASE</span>
+                </button>
+              </form>
             </div>
           </div>
         </div>
