--- a/views/course.ejs
+++ b/views/course.ejs
@@ -19,6 +19,7 @@
             <img src="/images/blog_single.jpg" alt="" class="img-fluid" />
           </div>
           <div class="post-content">
+            <% if(user && user.role === 'student' && !user.courses.includes(course._id)) { %>
             <div class="post-date">
               <form method="POST" action="/courses/enroll">
                 <input type="hidden" name="courseId" value="<%= course._id %>"/>
@@ -27,6 +28,7 @@
                 </button>
               </form>
             </div>
+            <% } %>
             <div class="meta-info-blog">
               <span
                 ><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a>
