--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -29,7 +29,7 @@
                   </h2>
                 </div>
                 <div class="course-desc">
-                  <p><%= courses[i].description %></p>
+                  <p><%= courses[i].description.length > 100 ? courses[i].description.slice(-100)+'...' : courses[i].description %></p>
                 </div>
               </div>
               <div class="course-meta-bot">
