--- a/views/course.ejs
+++ b/views/course.ejs
@@ -19,10 +19,15 @@
             <img src="/images/blog_single.jpg" alt="" class="img-fluid" />
           </div>
           <div class="post-content">
-            <% if(user && user.role === 'student' && !user.courses.includes(course._id)) { %>
+            <% if(user && user.role === 'student' &&
+            !user.courses.includes(course._id)) { %>
             <div class="post-date">
               <form method="POST" action="/courses/enroll">
-                <input type="hidden" name="courseId" value="<%= course._id %>"/>
+                <input
+                  type="hidden"
+                  name="courseId"
+                  value="<%= course._id %>"
+                />
                 <button class="btn btn-lg btn-warning text-white">
                   <span>ENROLL</span>
                 </button>
@@ -55,16 +60,16 @@
       <div class="col-lg-3 col-12 right-single">
         <div class="widget-search">
           <div class="site-search-area">
-            <form method="get" id="site-searchform" action="#">
+            <form method="GET" id="site-searchform" action="/courses?search=">
               <div>
                 <input
                   class="input-text form-control"
-                  name="search-k"
-                  id="search-k"
-                  placeholder="Search keywords..."
+                  name="search"
+                  id="search"
+                  placeholder="Search..."
                   type="text"
                 />
-                <input id="searchsubmit" value="Search" type="submit" />
+                <button id="searchsubmit" value="Search" type="submit"></button>
               </div>
             </form>
           </div>
@@ -72,12 +77,17 @@
         <div class="widget-categories">
           <h3 class="widget-title">Categories</h3>
           <ul>
-            <li><a href="#">Political Science</a></li>
-            <li><a href="#">Business Leaders Guide</a></li>
-            <li><a href="#">Become a Product Manage</a></li>
-            <li><a href="#">Language Education</a></li>
-            <li><a href="#">Micro Biology</a></li>
-            <li><a href="#">Social Media Management</a></li>
+            <li>
+              <a href="/courses">Tümü</a>
+            </li>
+
+            <% for(let i = 0; i < categories.length; i++ ) { %>
+            <li>
+              <a href="/courses?category=<%= categories[i].slug %>"
+                ><%= categories[i].name %></a
+              >
+            </li>
+            <% } %>
           </ul>
         </div>
       </div>
