--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -29,13 +29,18 @@
                   </h2>
                 </div>
                 <div class="course-desc">
-                  <p><%= courses[i].description.length > 100 ? courses[i].description.slice(-100)+'...' : courses[i].description %></p>
+                  <p>
+                    <%= courses[i].description.length > 100 ?
+                    courses[i].description.slice(-100)+'...' :
+                    courses[i].description %>
+                  </p>
                 </div>
               </div>
               <div class="course-meta-bot">
                 <ul>
                   <li>
-                    <i class="fa fa-user" aria-hidden="true"></i>Teacher Name
+                    <i class="fa fa-user" aria-hidden="true"></i><%=
+                    courses[i].user.name %>
                   </li>
                 </ul>
               </div>
@@ -50,16 +55,16 @@
       <div class="col-lg-3 col-12 right-single">
         <div class="widget-search">
           <div class="site-search-area">
-            <form method="get" id="site-searchform" action="#">
+            <form method="GET" id="site-searchform" action="/courses?search=">
               <div>
                 <input
                   class="input-text form-control"
-                  name="search-k"
-                  id="search-k"
-                  placeholder="Search keywords..."
+                  name="search"
+                  id="search"
+                  placeholder="Search..."
                   type="text"
                 />
-                <input id="searchsubmit" value="Search" type="submit" />
+                <button id="searchsubmit" value="Search" type="submit"></button>
               </div>
             </form>
           </div>
