--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -95,7 +95,7 @@ if(user) { %> <%if(user.role === 'student') { %>
     </div>
     <!-- end row -->
     <div class="row mt-5">
-      <% for(let i = 0; i < courses.length; i++) { %>
+      <% for(var i = 0; i < courses.length; i++) { %>
       <div class="col-lg-6 col-md-6 col-12">
         <div class="course-item mb-5">
           <div class="image-blog">
@@ -115,7 +115,11 @@ if(user) { %> <%if(user.role === 'student') { %>
             <div
               class="d-flex flex-row justify-content-md-end justify-content-center align-items-center m-0"
             >
-              <button class="btn btn-primary btn-rounded text-white mr-1">
+              <button
+                class="btn btn-primary btn-rounded text-white mr-1"
+                data-toggle="modal"
+                data-target="#updateCourse<%= courses[i]._id %>"
+              >
                 <span>Update</span>
               </button>
 
@@ -131,6 +135,95 @@ if(user) { %> <%if(user.role === 'student') { %>
         </div>
       </div>
       <!-- end col -->
+      <!-- Update Modal -->
+      <div
+        class="modal fade"
+        id="updateCourse<%= courses[i]._id %>"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="myUpdateModalLabel"
+      >
+        <div
+          class="modal-dialog modal-dialog-centered modal-lg"
+          role="document"
+        >
+          <div class="modal-content">
+            <div class="modal-body customer-box">
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <div class="tab-pane active" id="Login">
+                  <form method="POST" action="/courses/<%= courses[i].slug %>?_method=PUT" class="form-horizontal">
+                    <div class="form-group">
+                      <div class="col-sm-12">
+                        <input
+                          type="text"
+                          name="name"
+                          class="form-control"
+                          placeholder="Course Name"
+                          value="<%= courses[i].name %>"
+                        />
+                      </div>
+                    </div>
+                    <input
+                      type="hidden"
+                      name="role"
+                      class="form-control"
+                      value="<%= user.role %>"
+                    />
+                    <div class="form-group">
+                      <div class="col-sm-12">
+                        <textarea
+                          rows="8"
+                          name="description"
+                          class="form-control"
+                          placeholder="Course Description"
+                          required
+                        ><%= courses[i].description %></textarea>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-sm-12">
+                        <select class="form-control" name="category">
+                          <option value="">Kategori Yok</option>
+                          <% for (let j = 0; j< categories.length; j++) { %>
+                            <% let isSelected = '';
+                            if (categories[j]._id.toString() === courses[i].category?.toString()) {
+                              isSelected = 'selected';
+                            } %>
+                          <option value="<%= categories[j]._id %>"
+                            <%= isSelected %>
+                            >
+                            <%= categories[j].name %>
+                          </option>
+                          <% } %>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-10">
+                        <button
+                          type="submit"
+                          class="btn btn-light btn-radius btn-brd grd1"
+                        >
+                          Submit
+                        </button>
+                        <button
+                          type="submit"
+                          class="btn btn-light btn-radius btn-brd grd1"
+                          data-dismiss="modal"
+                          aria-hidden="true"
+                        >
+                          Cancel
+                        </button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <% } %>
     </div>
     <!-- end row -->
