--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,10 +55,11 @@
                     <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
                 </div>
             </div><!-- end title -->
-        
+        <% if(courses[0]) { %>
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
+						
                         <h2><%= courses[0].name %></h2>
                         <p><%= courses[0].description %></p>
                         <a href="/courses/<%= courses[0].slug %>" class="hover-btn-new orange"><span>Learn More</span></a>
@@ -71,13 +72,14 @@
                     </div><!-- end media -->
                 </div><!-- end col -->
 			</div>
+		<% } %>
+		<% if(courses[1]) { %>
 			<div class="row align-items-center">
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="post-media wow fadeIn">
                         <img src="/images/about_03.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
-				
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
                         <h2><%= courses[1].name %></h2>
@@ -85,8 +87,8 @@
                         <a href="/courses/<%= courses[1].slug %>" class="hover-btn-new orange"><span>Learn More</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
-				
             </div><!-- end row -->
+			<% } %>
         </div><!-- end container -->
     </div><!-- end section -->
 
